# j4a-pl-cs4

./: .gitignore  README.md  groupDetails
concurrency/: README.md  fishing.py
concurrency/C++/: concurr.cpp
control-flow/: README.md  TakoGuess.cpp  numberGuess.py
final_project/: README.md
final_project/src/pokedex-project/: main.cpp
final_project/src/pokedex-project/modules/: pokedata.h
final_project/src/pokemon-project/: main.py
final_project/src/pokemon-project/modules/: catalogue_viewer.py  game_logic.py  pokemon_api.py
pokedex-project/: CMakeLists.txt  main.cpp
pokedex-project/modules/: pokeapi.cpp  pokeapi.h  pokedata.h  pokeui.cpp  pokeui.h
pokedex-project/modules/UI/: CMakeLists.txt  ui.cpp  ui.h
pokemon-project/: README.md  main.py
pokemon-project/modules/: README.md  game_logic.py  pokemon_api.py
pokemon-project/wtp-v1/: main.py
pokemon-project/wtp-v1/modules/: game_logic.py  pokemon_api.py
pokemon-project/wtp-v2/: main.py
pokemon-project/wtp-v2/modules/: catalogue_viewer.py  pokemon_api.py
prelim-review/: README.md
prelim-review/c++/: GlobalVsLocal.cpp  Tokens.cpp  WeakTyping.js
prelim-review/c++/syntax_vs_semantics/: Semantic Error.cpp  Syntax Error.cpp
prelim-review/python/: strongTyping.py  tokenExamples.py  variableScope.py
prelim-review/python/syntax_vs_semantics/: semantics.py  syntax.py
subprograms/: MainCal.cpp  README.md  main.py
subprograms/Modular/: Cookielator.cpp  Cookielator.h
subprograms/modules/: isogram.py  palindrome.py  tautonym.py
